fixed problem on containers from all pages : no more 80px white space at bottom of full screen pages + 80px padding-top added on all pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,8 +32,8 @@ hr {
 }
 
 .container {
-  // padding-inline: 345px;
   padding-inline: 20%;
+  padding-top: 80px;
 }
 
 .display-block {
@@ -56,7 +56,8 @@ hr {
 .background-light-grey {
   background-color: #F5F5F5;
   // background: url('https://res.cloudinary.com/drb37tawz/image/upload/v1693253966/Rectangle_22_byys18.jpg');
-  min-height: calc(100vh - 80px);
+  // min-height: calc(100vh - 80px);
+  min-height: 100vh;
 }
 
 .align-items-center {
